--- a/video_shorts.ipynb
+++ b/video_shorts.ipynb
@@ -415,7 +415,7 @@
     "            video.close()\n",
     "            # (Corrección) Si no hay cortes, APLICAR EL ZOOM a todo el clip\n",
     "            # para que el video_cortado tenga el tamaño correcto (par)\n",
-    "            video_zoom = video.resize(ZOOM_LEVEL).crop(x_center=W/2, y_center=H/2, width=W, height=H)\n",
+    "            video_zoom = video.resize(ZOOM_LEVEL, interpolation='lanczos').crop(x_center=W/2, y_center=H/2, width=W, height=H)\n",
     "            video_final = concatenate_videoclips([video.subclip(0, 0.01), video_zoom.subclip(0.01)])\n",
     "            video_final.write_videofile(video_final_path, codec=\"libx264\", audio_codec=\"aac\", logger=None)\n",
     "            video_final.close()\n",
@@ -467,7 +467,7 @@
     "                \n",
     "                if len(clips_buenos) % 2 == 1:\n",
     "                    print(f\"  · Aplicando zoom a clip #{len(clips_buenos)}\")\n",
-    "                    sub = sub.resize(ZOOM_LEVEL).crop(x_center=W/2, y_center=H/2, width=W, height=H)\n",
+    "                    sub = sub.resize(ZOOM_LEVEL, interpolation='lanczos').crop(x_center=W/2, y_center=H/2, width=W, height=H)\n",
     "                \n",
     "                clips_buenos.append(sub)\n",
     "            \n",
@@ -480,7 +480,7 @@
     "            \n",
     "            if len(clips_buenos) % 2 == 1:\n",
     "                 print(f\"  · Aplicando zoom a clip final #{len(clips_buenos)}\")\n",
-    "                 sub = sub.resize(ZOOM_LEVEL).crop(x_center=W/2, y_center=H/2, width=W, height=H)\n",
+    "                 sub = sub.resize(ZOOM_LEVEL, interpolation='lanczos').crop(x_center=W/2, y_center=H/2, width=W, height=H)\n",
     "                 \n",
     "            clips_buenos.append(sub)\n",
     "\n",
@@ -744,7 +744,28 @@
       "Duración total del video: 00:12:18\n",
       "Conectando con Gemini para analizar relleno verbal (duración > 0.1s)...\n",
       "Análisis de IA completado. Parseando y filtrando segmentos...\n",
-      "Se identificaron 33 cortes de IA válidos (duración >= 0.1s).\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:01:31', 'fin': '00:01:31'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:03:13', 'fin': '00:03:13'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:04:04', 'fin': '00:04:04'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:04:25', 'fin': '00:04:25'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:05:07', 'fin': '00:05:07'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:07:19', 'fin': '00:07:19'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:07:32', 'fin': '00:07:32'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:07:55', 'fin': '00:07:55'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:08:05', 'fin': '00:08:05'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:08:59', 'fin': '00:08:59'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:09:00', 'fin': '00:09:00'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:09:34', 'fin': '00:09:34'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:25', 'fin': '00:10:25'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:26', 'fin': '00:10:26'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:33', 'fin': '00:10:33'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:36', 'fin': '00:10:36'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:46', 'fin': '00:10:46'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:47', 'fin': '00:10:47'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:50', 'fin': '00:10:50'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:11:02', 'fin': '00:11:02'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:12:17', 'fin': '00:12:17'}\n",
+      "Se identificaron 19 cortes de IA válidos (duración >= 0.1s).\n",
       "Identificando silencios de inicio, fin y entre frases (umbral: 1.5s)...\n",
       "  · Silencio inicial detectado: 00:00:00 a 00:00:01\n",
       "\n",
@@ -767,58 +788,28 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:01:20\",\n",
-      "    \"fin\": \"00:01:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:01:31\",\n",
-      "    \"fin\": \"00:01:32\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:04\",\n",
-      "    \"fin\": \"00:02:05\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:02:22\",\n",
       "    \"fin\": \"00:02:23\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:33\",\n",
-      "    \"fin\": \"00:02:34\"\n",
+      "    \"inicio\": \"00:02:31\",\n",
+      "    \"fin\": \"00:02:33\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:13\",\n",
-      "    \"fin\": \"00:03:14\"\n",
+      "    \"inicio\": \"00:03:57\",\n",
+      "    \"fin\": \"00:03:59\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:23\",\n",
-      "    \"fin\": \"00:03:24\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:04\",\n",
-      "    \"fin\": \"00:04:05\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:05\",\n",
+      "    \"inicio\": \"00:04:06\",\n",
       "    \"fin\": \"00:04:07\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:25\",\n",
-      "    \"fin\": \"00:04:26\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:30\",\n",
-      "    \"fin\": \"00:04:31\"\n",
+      "    \"inicio\": \"00:04:11\",\n",
+      "    \"fin\": \"00:04:12\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -832,8 +823,8 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:06:26\",\n",
-      "    \"fin\": \"00:06:27\"\n",
+      "    \"inicio\": \"00:05:07\",\n",
+      "    \"fin\": \"00:05:08\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -842,18 +833,8 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:19\",\n",
-      "    \"fin\": \"00:07:20\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:20\",\n",
-      "    \"fin\": \"00:07:21\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:54\",\n",
-      "    \"fin\": \"00:07:55\"\n",
+      "    \"inicio\": \"00:07:53\",\n",
+      "    \"fin\": \"00:07:54\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -862,58 +843,28 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:59\",\n",
-      "    \"fin\": \"00:09:00\"\n",
+      "    \"inicio\": \"00:09:34\",\n",
+      "    \"fin\": \"00:09:36\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:04\",\n",
-      "    \"fin\": \"00:09:05\"\n",
+      "    \"inicio\": \"00:10:27\",\n",
+      "    \"fin\": \"00:10:28\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:25\",\n",
-      "    \"fin\": \"00:10:26\"\n",
+      "    \"inicio\": \"00:11:08\",\n",
+      "    \"fin\": \"00:11:09\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:33\",\n",
-      "    \"fin\": \"00:10:34\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:36\",\n",
-      "    \"fin\": \"00:10:37\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:37\",\n",
-      "    \"fin\": \"00:10:38\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:50\",\n",
-      "    \"fin\": \"00:10:51\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:02\",\n",
-      "    \"fin\": \"00:11:03\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:07\",\n",
-      "    \"fin\": \"00:11:08\"\n",
+      "    \"inicio\": \"00:11:18\",\n",
+      "    \"fin\": \"00:11:19\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:12:01\",\n",
       "    \"fin\": \"00:12:02\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:12:17\",\n",
-      "    \"fin\": \"00:12:18\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"silencio_inicial\",\n",
@@ -948,17 +899,7 @@
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:01:19\",\n",
-      "    \"fin\": \"00:01:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:01:31\",\n",
-      "    \"fin\": \"00:01:32\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:04\",\n",
-      "    \"fin\": \"00:02:05\"\n",
+      "    \"fin\": \"00:01:20\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -967,33 +908,23 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:33\",\n",
-      "    \"fin\": \"00:02:34\"\n",
+      "    \"inicio\": \"00:02:31\",\n",
+      "    \"fin\": \"00:02:33\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:13\",\n",
-      "    \"fin\": \"00:03:14\"\n",
+      "    \"inicio\": \"00:03:57\",\n",
+      "    \"fin\": \"00:03:59\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:23\",\n",
-      "    \"fin\": \"00:03:24\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:04\",\n",
+      "    \"inicio\": \"00:04:06\",\n",
       "    \"fin\": \"00:04:07\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:25\",\n",
-      "    \"fin\": \"00:04:26\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:30\",\n",
-      "    \"fin\": \"00:04:31\"\n",
+      "    \"inicio\": \"00:04:11\",\n",
+      "    \"fin\": \"00:04:12\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -1003,12 +934,7 @@
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:05:06\",\n",
-      "    \"fin\": \"00:05:07\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:06:26\",\n",
-      "    \"fin\": \"00:06:27\"\n",
+      "    \"fin\": \"00:05:08\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -1017,13 +943,8 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:19\",\n",
-      "    \"fin\": \"00:07:21\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:54\",\n",
-      "    \"fin\": \"00:07:55\"\n",
+      "    \"inicio\": \"00:07:53\",\n",
+      "    \"fin\": \"00:07:54\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -1032,53 +953,28 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:59\",\n",
-      "    \"fin\": \"00:09:00\"\n",
+      "    \"inicio\": \"00:09:34\",\n",
+      "    \"fin\": \"00:09:36\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:04\",\n",
-      "    \"fin\": \"00:09:05\"\n",
+      "    \"inicio\": \"00:10:27\",\n",
+      "    \"fin\": \"00:10:28\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:25\",\n",
-      "    \"fin\": \"00:10:26\"\n",
+      "    \"inicio\": \"00:11:08\",\n",
+      "    \"fin\": \"00:11:09\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:33\",\n",
-      "    \"fin\": \"00:10:34\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:36\",\n",
-      "    \"fin\": \"00:10:38\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:50\",\n",
-      "    \"fin\": \"00:10:51\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:02\",\n",
-      "    \"fin\": \"00:11:03\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:07\",\n",
-      "    \"fin\": \"00:11:08\"\n",
+      "    \"inicio\": \"00:11:18\",\n",
+      "    \"fin\": \"00:11:19\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:12:01\",\n",
       "    \"fin\": \"00:12:02\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:12:17\",\n",
-      "    \"fin\": \"00:12:18\"\n",
       "  }\n",
       "]\n",
       "--------------------------------------------------\n",
@@ -1092,7 +988,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ha ocurrido un error al ensamblar el video: module 'PIL.Image' has no attribute 'ANTIALIAS'\n",
+      "Ha ocurrido un error al ensamblar el video: resize() got an unexpected keyword argument 'interpolation'\n",
       "El proceso (Etapa 1) falló: Falló la etapa de corte de video.\n"
      ]
     }
