--- a/video_shorts.ipynb
+++ b/video_shorts.ipynb
@@ -744,7 +744,7 @@
       "Duración total del video: 00:12:18\n",
       "Conectando con Gemini para analizar relleno verbal (duración > 0.1s)...\n",
       "Análisis de IA completado. Parseando y filtrando segmentos...\n",
-      "Se identificaron 49 cortes de IA válidos (duración >= 0.1s).\n",
+      "Se identificaron 17 cortes de IA válidos (duración >= 0.1s).\n",
       "Identificando silencios de inicio, fin y entre frases (umbral: 1.5s)...\n",
       "  · Silencio inicial detectado: 00:00:00 a 00:00:01\n",
       "\n",
@@ -758,12 +758,7 @@
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:00:36\",\n",
-      "    \"fin\": \"00:00:37\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:00:54\",\n",
-      "    \"fin\": \"00:00:56\"\n",
+      "    \"fin\": \"00:00:38\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -782,6 +777,11 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:31\",\n",
+      "    \"fin\": \"00:02:33\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:02:33\",\n",
       "    \"fin\": \"00:02:36\"\n",
       "  },\n",
@@ -789,11 +789,6 @@
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:02:46\",\n",
       "    \"fin\": \"00:02:48\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:05\",\n",
-      "    \"fin\": \"00:03:08\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -812,17 +807,12 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:57\",\n",
-      "    \"fin\": \"00:03:59\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:04:04\",\n",
       "    \"fin\": \"00:04:08\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:08\",\n",
+      "    \"inicio\": \"00:04:10\",\n",
       "    \"fin\": \"00:04:13\"\n",
       "  },\n",
       "  {\n",
@@ -832,163 +822,13 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:30\",\n",
-      "    \"fin\": \"00:04:33\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:52\",\n",
-      "    \"fin\": \"00:04:55\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:05:04\",\n",
-      "    \"fin\": \"00:05:07\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:05:07\",\n",
-      "    \"fin\": \"00:05:10\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:05:44\",\n",
-      "    \"fin\": \"00:05:46\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:06:38\",\n",
-      "    \"fin\": \"00:06:40\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:06:55\",\n",
-      "    \"fin\": \"00:06:57\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:07:17\",\n",
       "    \"fin\": \"00:07:19\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:19\",\n",
-      "    \"fin\": \"00:07:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:30\",\n",
-      "    \"fin\": \"00:07:32\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:32\",\n",
-      "    \"fin\": \"00:07:36\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:43\",\n",
-      "    \"fin\": \"00:07:47\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:54\",\n",
-      "    \"fin\": \"00:07:57\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:03\",\n",
-      "    \"fin\": \"00:08:06\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:13\",\n",
-      "    \"fin\": \"00:08:15\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:20\",\n",
-      "    \"fin\": \"00:08:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:39\",\n",
-      "    \"fin\": \"00:08:41\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:46\",\n",
-      "    \"fin\": \"00:08:49\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:59\",\n",
-      "    \"fin\": \"00:09:02\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:04\",\n",
-      "    \"fin\": \"00:09:07\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:10\",\n",
-      "    \"fin\": \"00:09:12\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:34\",\n",
-      "    \"fin\": \"00:09:37\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:44\",\n",
-      "    \"fin\": \"00:09:46\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:57\",\n",
-      "    \"fin\": \"00:09:58\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:25\",\n",
-      "    \"fin\": \"00:10:29\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:33\",\n",
-      "    \"fin\": \"00:10:37\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:46\",\n",
-      "    \"fin\": \"00:10:47\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:02\",\n",
-      "    \"fin\": \"00:11:04\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:07\",\n",
-      "    \"fin\": \"00:11:10\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:19\",\n",
-      "    \"fin\": \"00:11:23\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:12:01\",\n",
       "    \"fin\": \"00:12:03\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:12:07\",\n",
-      "    \"fin\": \"00:12:09\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -1023,12 +863,7 @@
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:00:36\",\n",
-      "    \"fin\": \"00:00:37\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:00:54\",\n",
-      "    \"fin\": \"00:00:56\"\n",
+      "    \"fin\": \"00:00:38\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -1047,18 +882,13 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:33\",\n",
+      "    \"inicio\": \"00:02:31\",\n",
       "    \"fin\": \"00:02:36\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:02:46\",\n",
       "    \"fin\": \"00:02:48\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:05\",\n",
-      "    \"fin\": \"00:03:08\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -1077,12 +907,12 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:57\",\n",
-      "    \"fin\": \"00:03:59\"\n",
+      "    \"inicio\": \"00:04:04\",\n",
+      "    \"fin\": \"00:04:08\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:04\",\n",
+      "    \"inicio\": \"00:04:10\",\n",
       "    \"fin\": \"00:04:13\"\n",
       "  },\n",
       "  {\n",
@@ -1092,148 +922,13 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:30\",\n",
-      "    \"fin\": \"00:04:33\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:52\",\n",
-      "    \"fin\": \"00:04:55\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:05:04\",\n",
-      "    \"fin\": \"00:05:10\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:05:44\",\n",
-      "    \"fin\": \"00:05:46\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:06:38\",\n",
-      "    \"fin\": \"00:06:40\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:06:55\",\n",
-      "    \"fin\": \"00:06:57\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:07:17\",\n",
-      "    \"fin\": \"00:07:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:30\",\n",
-      "    \"fin\": \"00:07:36\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:43\",\n",
-      "    \"fin\": \"00:07:47\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:54\",\n",
-      "    \"fin\": \"00:07:57\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:03\",\n",
-      "    \"fin\": \"00:08:06\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:13\",\n",
-      "    \"fin\": \"00:08:15\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:20\",\n",
-      "    \"fin\": \"00:08:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:39\",\n",
-      "    \"fin\": \"00:08:41\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:46\",\n",
-      "    \"fin\": \"00:08:49\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:08:59\",\n",
-      "    \"fin\": \"00:09:02\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:04\",\n",
-      "    \"fin\": \"00:09:07\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:10\",\n",
-      "    \"fin\": \"00:09:12\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:34\",\n",
-      "    \"fin\": \"00:09:37\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:44\",\n",
-      "    \"fin\": \"00:09:46\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:09:57\",\n",
-      "    \"fin\": \"00:09:58\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:25\",\n",
-      "    \"fin\": \"00:10:29\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:33\",\n",
-      "    \"fin\": \"00:10:37\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:10:46\",\n",
-      "    \"fin\": \"00:10:47\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:02\",\n",
-      "    \"fin\": \"00:11:04\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:07\",\n",
-      "    \"fin\": \"00:11:10\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:11:19\",\n",
-      "    \"fin\": \"00:11:23\"\n",
+      "    \"fin\": \"00:07:19\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:12:01\",\n",
       "    \"fin\": \"00:12:03\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:12:07\",\n",
-      "    \"fin\": \"00:12:09\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
@@ -1245,15 +940,40 @@
       "\n",
       "Manteniendo clip: 00:00:01 a 00:00:13\n",
       "Manteniendo clip: 00:00:15 a 00:00:36\n",
-      "  · Aplicando zoom a clip #1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ha ocurrido un error al ensamblar el video: module 'PIL.Image' has no attribute 'ANTIALIAS'\n",
-      "El proceso (Etapa 1) falló: Falló la etapa de corte de video.\n"
+      "  · Aplicando zoom a clip #1\n",
+      "Manteniendo clip: 00:00:38 a 00:01:19\n",
+      "Manteniendo clip: 00:01:22 a 00:01:31\n",
+      "  · Aplicando zoom a clip #3\n",
+      "Manteniendo clip: 00:01:35 a 00:02:22\n",
+      "Manteniendo clip: 00:02:25 a 00:02:31\n",
+      "  · Aplicando zoom a clip #5\n",
+      "Manteniendo clip: 00:02:36 a 00:02:46\n",
+      "Manteniendo clip: 00:02:48 a 00:03:13\n",
+      "  · Aplicando zoom a clip #7\n",
+      "Manteniendo clip: 00:03:16 a 00:03:23\n",
+      "Manteniendo clip: 00:03:26 a 00:03:28\n",
+      "  · Aplicando zoom a clip #9\n",
+      "Manteniendo clip: 00:03:30 a 00:04:04\n",
+      "Manteniendo clip: 00:04:08 a 00:04:10\n",
+      "  · Aplicando zoom a clip #11\n",
+      "Manteniendo clip: 00:04:13 a 00:04:25\n",
+      "Manteniendo clip: 00:04:28 a 00:07:17\n",
+      "  · Aplicando zoom a clip #13\n",
+      "Manteniendo clip: 00:07:19 a 00:12:01\n",
+      "Manteniendo clip: 00:12:03 a 00:12:17\n",
+      "  · Aplicando zoom a clip #15\n",
+      "Manteniendo clip final: 00:12:18 a 00:12:18\n",
+      "\n",
+      "Ensamblando video final a partir de 17 clips (con zoom alternado)...\n",
+      "\n",
+      "Etapa 1 completada. Video cortado guardado en: edited/video_cortado.mp4\n",
+      "Guardando metadatos de cortes en edited/metadata_cortes.json...\n",
+      "\n",
+      "--- ¡ETAPA 1 FINALIZADA! ---\n",
+      "Video cortado: edited/video_cortado.mp4\n",
+      "Metadatos: edited/metadata_cortes.json\n",
+      "\n",
+      "Ahora puedes ejecutar la CELDA 4 para agregar emojis.\n"
      ]
     }
    ],
@@ -1344,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6dcc0122",
    "metadata": {},
    "outputs": [
@@ -1353,72 +1073,15 @@
      "output_type": "stream",
      "text": [
       "--- INICIANDO ETAPA 2: AGREGAR EMOJIS ---\n",
-      "Cargando metadatos desde edited/metadata_cortes.json...\n",
-      "Metadatos cargados exitosamente.\n",
-      "Leyendo archivo de subtítulos local: to_edit/subs.vtt...\n",
-      "Subtítulos leídos y formateados exitosamente. (Parser V4)\n",
-      "Conectando con Gemini para analizar y sugerir emojis...\n",
-      "Análisis de emojis completado.\n",
-      "\n",
-      "--- Emojis sugeridos por la IA ---\n",
-      "[\n",
-      "  {\n",
-      "    \"emoji\": \"🚀\",\n",
-      "    \"inicio\": \"00:00:04\",\n",
-      "    \"fin\": \"00:00:06\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"emoji\": \"✅\",\n",
-      "    \"inicio\": \"00:00:27\",\n",
-      "    \"fin\": \"00:00:29\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"emoji\": \"💰\",\n",
-      "    \"inicio\": \"00:05:15\",\n",
-      "    \"fin\": \"00:05:17\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"emoji\": \"🌍\",\n",
-      "    \"inicio\": \"00:05:27\",\n",
-      "    \"fin\": \"00:05:29\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"emoji\": \"✈️\",\n",
-      "    \"inicio\": \"00:07:38\",\n",
-      "    \"fin\": \"00:07:40\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"emoji\": \"🎯\",\n",
-      "    \"inicio\": \"00:11:39\",\n",
-      "    \"fin\": \"00:11:41\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"emoji\": \"💰\",\n",
-      "    \"inicio\": \"00:11:44\",\n",
-      "    \"fin\": \"00:11:46\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"emoji\": \"❤️\",\n",
-      "    \"inicio\": \"00:12:13\",\n",
-      "    \"fin\": \"00:12:15\"\n",
-      "  }\n",
-      "]\n",
-      "------------------------------------\n",
-      "\n",
-      "Iniciando Etapa 2 (V2.1 - Estable): Superposición de Emojis en edited/video_cortado.mp4...\n",
-      "Buscando la fuente de emoji local: NotoColorEmoji.ttf...\n",
-      "Fuente de emoji encontrada: NotoColorEmoji.ttf\n",
-      "Metadatos intermedios (edited/metadata_cortes.json) eliminados.\n",
-      "\n",
-      "--- ¡ETAPA 2 FINALIZADA! ---\n",
-      "Video final con emojis guardado en: edited/video_final_con_emojis.mp4\n"
+      "Cargando metadatos desde edited/metadata_cortes.json...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ha ocurrido un error al crear el video con emojis: invalid pixel size\n"
+      "Error: No se encuentra el archivo de metadatos 'edited/metadata_cortes.json'.\n",
+      "El proceso (Etapa 2) falló: Por favor, ejecuta la CELDA 3 primero.\n"
      ]
     }
    ],
