preparando para migrar a whisper

--- a/video_shorts.ipynb
+++ b/video_shorts.ipynb
@@ -183,32 +183,49 @@
     "    try:\n",
     "        model = genai.GenerativeModel('gemini-2.0-flash')\n",
     "        prompt = f\"\"\"\n",
-    "        Eres un editor de video cuya tarea es eliminar \"relleno\" obvio\n",
-    "        de una transcripción.\n",
+    "        Eres un editor de video experto y muy conservador. Tu tarea es \n",
+    "        identificar segmentos de una transcripción para ELIMINAR.\n",
     "\n",
-    "        Analiza la siguiente transcripción e identifica segmentos para ELIMINAR\n",
-    "        basado en dos criterios. Sé muy conservador.\n",
+    "        ¡CONTEXTO CRÍTICO!\n",
+    "        La transcripción que te doy tiene marcas de tiempo [HH:MM:SS] \n",
+    "        para FRASES ENTERAS, no para palabras individuales.\n",
+    "        Ejemplo: [00:01:19] que con eh para que con ellos puedas\n",
     "\n",
-    "        CRITERIOS PARA ELIMINAR:\n",
-    "        1.  **Muletillas / Rellenos:** Palabras o sonidos como 'ehh', 'mmm',\n",
-    "            'pues...', 'esteee...', 'o sea...', 'bueno...'.\n",
-    "            Tu objetivo es eliminar las que *interrumpen la fluidez*.\n",
-    "        2.  **Reinicios Falsos CLAROS:** Oraciones que el orador\n",
-    "            empieza, abandona a mitad de frase, y vuelve a empezar\n",
-    "            (ej. \"Y el video... no, mejor dicho, el audio...\")\n",
+    "        Esto significa que NO PODEMOS cortar la muletilla \"eh\" sin \n",
+    "        cortar también \"que con\" y \"para que\".\n",
     "\n",
-    "        REGLAS CRÍTICAS:\n",
-    "        -   **SÉ CONSERVADOR.** Si dudas, NO LO CORTES.\n",
-    "        -   Si el video está limpio, devuelve una lista vacía [].\n",
+    "        REGLAS ESTRICTAS DE CORTE:\n",
+    "        1.  **NO CORTES MULETILLAS DENTRO DE FRASES:** Si una muletilla\n",
+    "            (ehh, mmm, pues, o sea) está en medio de una frase con \n",
+    "            contenido valioso (como el ejemplo de arriba), \n",
+    "            IGNÓRALA. Es mejor no cortar nada que cortar contenido bueno.\n",
+    "        \n",
+    "        2.  **SÍ CORTA FRASES QUE SON SÓLO MULETILLAS:** SÓLO debes\n",
+    "            sugerir un corte si la frase ENTERA es una muletilla obvia.\n",
+    "            Ejemplos VÁLIDOS para cortar:\n",
+    "            - [00:02:15] ehh...\n",
+    "            - [00:03:30] mmmm\n",
+    "            - [00:04:10] o sea...\n",
+    "            - [00:05:01] pues...\n",
     "\n",
-    "        Tu respuesta DEBE ser únicamente un objeto JSON:\n",
-    "        - \"motivo\": (\"muletilla\", \"reinicio falso\")\n",
-    "        - \"inicio\": El timestamp 'HH:MM:SS' de inicio.\n",
-    "        - \"fin\": El timestamp 'HH:MM:SS' de fin.\n",
+    "        3.  **SÍ CORTA REINICIOS FALSOS (False Starts):** Si una frase \n",
+    "            claramente se abandona y se reinicia en la siguiente línea.\n",
+    "            Ejemplo VÁLIDO para cortar:\n",
+    "            - [00:06:20] Y el video...\n",
+    "            - [00:06:21] no, mejor dicho, el audio...\n",
+    "            (En este caso, SÍ cortarías la línea [00:06:20])\n",
     "\n",
-    "        Ejemplo de respuesta:\n",
+    "        4.  **SÉ MUY CONSERVADOR:** Ante la duda, NO CORTES.\n",
+    "\n",
+    "        Tu respuesta DEBE ser únicamente un objeto JSON con los \n",
+    "        segmentos a eliminar, usando el timestamp de inicio de la \n",
+    "        línea y adivinando un timestamp final apropiado (usualmente \n",
+    "        1 o 2 segundos después del inicio).\n",
+    "\n",
+    "        Formato de respuesta:\n",
     "        [\n",
-    "          {{\"motivo\": \"muletilla\", \"inicio\": \"00:02:15\", \"fin\": \"00:02:17\"}}\n",
+    "        {{\"motivo\": \"muletilla\", \"inicio\": \"HH:MM:SS\", \"fin\": \"HH:MM:SS\"}},\n",
+    "        {{\"motivo\": \"reinicio falso\", \"inicio\": \"HH:MM:SS\", \"fin\": \"HH:MM:SS\"}}\n",
     "        ]\n",
     "\n",
     "        Aquí está la transcripción:\n",
@@ -313,13 +330,14 @@
     "        return []\n",
     "\n",
     "\n",
-    "# --- FUNCIÓN DE SILENCIOS (¡ACTUALIZADA V2 - MANEJA INICIO, FIN Y MEDIO!) ---\n",
+    "# --- FUNCIÓN DE SILENCIOS (¡ACTUALIZADA V3 - MANEJA SOLAPAMIENTO!) ---\n",
     "def identificar_silencios_largos(captions_obj, video_duration, umbral_segundos=1.5):\n",
     "    \"\"\"\n",
     "    Identifica TODOS los silencios (inicio, medio, fin)\n",
     "    basado en los subtítulos y un umbral.\n",
+    "    ¡ESTA VERSIÓN V3 PRIMERO FUSIONA LOS SUBTÍTULOS SOLAPADOS!\n",
     "    \"\"\"\n",
-    "    print(f\"Identificando silencios de inicio, fin y entre frases (umbral: {umbral_segundos}s)...\")\n",
+    "    print(f\"Identificando silencios (V3 - Fusionando solapados) (umbral: {umbral_segundos}s)...\")\n",
     "    if not captions_obj or len(captions_obj) == 0:\n",
     "        return []\n",
     "        \n",
@@ -329,13 +347,41 @@
     "    try:\n",
     "        sorted_captions = sorted(captions_obj, key=lambda c: c.start_in_seconds)\n",
     "    except Exception as e:\n",
-    "        print(f\"  · ERROR: No se pudieron ordenar los subtítulos (¿parser VTT falló?): {e}\", file=sys.stderr)\n",
+    "        print(f\"  · ERROR: No se pudieron ordenar los subtítulos: {e}\", file=sys.stderr)\n",
     "        return []\n",
     "\n",
-    "    # 2. SILENCIO INICIAL\n",
-    "    # Queremos que el video empiece 1 seg ANTES de la primera palabra\n",
-    "    inicio_habla_seg = sorted_captions[0].start_in_seconds\n",
-    "    nuevo_inicio_video_seg = max(0, inicio_habla_seg - 1.0)\n",
+    "    # 2. FUSIONAR BLOQUES SOLAPADOS\n",
+    "    # Esto es clave para manejar VTT de baja calidad como el tuyo.\n",
+    "    merged_captions = []\n",
+    "    if sorted_captions:\n",
+    "        # Empezar con el primer subtítulo\n",
+    "        current_cap_start = sorted_captions[0].start_in_seconds\n",
+    "        current_cap_end = sorted_captions[0].end_in_seconds\n",
+    "\n",
+    "        for next_cap in sorted_captions[1:]:\n",
+    "            # Comprobar si el siguiente subtítulo empieza ANTES de que termine el actual\n",
+    "            if next_cap.start_in_seconds <= current_cap_end:\n",
+    "                # Hay solapamiento. Extendemos el fin del bloque actual\n",
+    "                current_cap_end = max(current_cap_end, next_cap.end_in_seconds)\n",
+    "            else:\n",
+    "                # No hay solapamiento. Este es un bloque de habla completo.\n",
+    "                # Guardamos el bloque fusionado\n",
+    "                merged_captions.append({'start': current_cap_start, 'end': current_cap_end})\n",
+    "                # Empezamos un nuevo bloque\n",
+    "                current_cap_start = next_cap.start_in_seconds\n",
+    "                current_cap_end = next_cap.end_in_seconds\n",
+    "        \n",
+    "        # Asegurarse de guardar el último bloque\n",
+    "        merged_captions.append({'start': current_cap_start, 'end': current_cap_end})\n",
+    "\n",
+    "    print(f\"  · Se detectaron {len(captions_obj)} subtítulos originales, fusionados en {len(merged_captions)} bloques de habla.\")\n",
+    "\n",
+    "    if not merged_captions:\n",
+    "         return []\n",
+    "\n",
+    "    # 3. SILENCIO INICIAL (Usando el primer bloque fusionado)\n",
+    "    inicio_habla_seg = merged_captions[0]['start']\n",
+    "    nuevo_inicio_video_seg = max(0, inicio_habla_seg - 1.0) # Dejar 1s de aire\n",
     "    \n",
     "    if nuevo_inicio_video_seg > 0.1: # Solo cortar si el silencio es significativo\n",
     "        print(f\"  · Silencio inicial detectado: 00:00:00 a {from_seconds(nuevo_inicio_video_seg)}\")\n",
@@ -345,19 +391,18 @@
     "            \"fin\": from_seconds(nuevo_inicio_video_seg)\n",
     "        })\n",
     "\n",
-    "    # 3. SILENCIOS ENTRE FRASES (Tu petición)\n",
-    "    for i in range(len(sorted_captions) - 1):\n",
-    "        cap_actual = sorted_captions[i]\n",
-    "        cap_siguiente = sorted_captions[i+1]\n",
+    "    # 4. SILENCIOS ENTRE FRASES (Usando bloques fusionados)\n",
+    "    for i in range(len(merged_captions) - 1):\n",
+    "        cap_actual_end = merged_captions[i]['end']\n",
+    "        cap_siguiente_start = merged_captions[i+1]['start']\n",
     "        \n",
-    "        # El 'gap' es el tiempo entre el fin de una frase y el inicio de la siguiente\n",
-    "        gap = cap_siguiente.start_in_seconds - cap_actual.end_in_seconds\n",
+    "        # El 'gap' es el tiempo entre el fin de un bloque de habla y el inicio del siguiente\n",
+    "        gap = cap_siguiente_start - cap_actual_end\n",
     "        \n",
     "        if gap >= umbral_segundos:\n",
-    "            # Cortar el 'gap', pero dejando 0.2s de 'aire'\n",
-    "            # para que el corte no sea tan brusco\n",
-    "            inicio_corte_gap = cap_actual.end_in_seconds + 0.1\n",
-    "            fin_corte_gap = cap_siguiente.start_in_seconds - 0.1\n",
+    "            # Cortar el 'gap', pero dejando 0.1s de 'aire' a cada lado\n",
+    "            inicio_corte_gap = cap_actual_end + 0.1\n",
+    "            fin_corte_gap = cap_siguiente_start - 0.1\n",
     "            \n",
     "            # Asegurarse de que el corte siga siendo válido\n",
     "            if fin_corte_gap > inicio_corte_gap:\n",
@@ -368,10 +413,9 @@
     "                    \"fin\": from_seconds(fin_corte_gap)\n",
     "                })\n",
     "\n",
-    "    # 4. SILENCIO FINAL\n",
-    "    # Queremos que el video termine 1 seg DESPUÉS de la última palabra\n",
-    "    fin_habla_seg = sorted_captions[-1].end_in_seconds\n",
-    "    nuevo_fin_video_seg = min(video_duration, fin_habla_seg + 1.0)\n",
+    "    # 5. SILENCIO FINAL (Usando el último bloque fusionado)\n",
+    "    fin_habla_seg = merged_captions[-1]['end']\n",
+    "    nuevo_fin_video_seg = min(video_duration, fin_habla_seg + 1.0) # Dejar 1s de aire\n",
     "    \n",
     "    if (video_duration - nuevo_fin_video_seg) > 0.1: # Solo cortar si el silencio es significativo\n",
     "        print(f\"  · Silencio final detectado: {from_seconds(nuevo_fin_video_seg)} a {from_seconds(video_duration)}\")\n",
@@ -382,6 +426,8 @@
     "        })\n",
     "        \n",
     "    return silencios\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# --- FUNCIÓN DE ENSAMBLAJE (V3 - CON ZOOM DINÁMICO y ENTRADA SIMPLE) ---\n",
@@ -744,96 +790,17 @@
       "Duración total del video: 00:12:18\n",
       "Conectando con Gemini para analizar relleno verbal (duración > 0.1s)...\n",
       "Análisis de IA completado. Parseando y filtrando segmentos...\n",
-      "Se identificaron 17 cortes de IA válidos (duración >= 0.1s).\n",
-      "Identificando silencios de inicio, fin y entre frases (umbral: 1.5s)...\n",
+      "Se identificaron 1 cortes de IA válidos (duración >= 0.1s).\n",
+      "Identificando silencios (V3 - Fusionando solapados) (umbral: 1.5s)...\n",
+      "  · Se detectaron 291 subtítulos originales, fusionados en 1 bloques de habla.\n",
       "  · Silencio inicial detectado: 00:00:00 a 00:00:01\n",
       "\n",
       "--- Segmentos totales a eliminar (antes de fusión) ---\n",
       "[\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:00:13\",\n",
-      "    \"fin\": \"00:00:15\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:00:36\",\n",
-      "    \"fin\": \"00:00:38\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:01:19\",\n",
-      "    \"fin\": \"00:01:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:01:31\",\n",
-      "    \"fin\": \"00:01:35\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:22\",\n",
-      "    \"fin\": \"00:02:25\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:31\",\n",
-      "    \"fin\": \"00:02:33\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:33\",\n",
-      "    \"fin\": \"00:02:36\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:46\",\n",
-      "    \"fin\": \"00:02:48\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:13\",\n",
-      "    \"fin\": \"00:03:16\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:23\",\n",
-      "    \"fin\": \"00:03:26\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:28\",\n",
-      "    \"fin\": \"00:03:30\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:04\",\n",
-      "    \"fin\": \"00:04:08\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:10\",\n",
-      "    \"fin\": \"00:04:13\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:25\",\n",
-      "    \"fin\": \"00:04:28\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:17\",\n",
-      "    \"fin\": \"00:07:19\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:12:01\",\n",
-      "    \"fin\": \"00:12:03\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:12:17\",\n",
-      "    \"fin\": \"00:12:18\"\n",
+      "    \"fin\": \"00:12:19\"\n",
       "  },\n",
       "  {\n",
       "    \"motivo\": \"silencio_inicial\",\n",
@@ -857,114 +824,15 @@
       "  },\n",
       "  {\n",
       "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:00:13\",\n",
-      "    \"fin\": \"00:00:15\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:00:36\",\n",
-      "    \"fin\": \"00:00:38\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:01:19\",\n",
-      "    \"fin\": \"00:01:22\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:01:31\",\n",
-      "    \"fin\": \"00:01:35\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:22\",\n",
-      "    \"fin\": \"00:02:25\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:31\",\n",
-      "    \"fin\": \"00:02:36\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:02:46\",\n",
-      "    \"fin\": \"00:02:48\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:13\",\n",
-      "    \"fin\": \"00:03:16\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:23\",\n",
-      "    \"fin\": \"00:03:26\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:03:28\",\n",
-      "    \"fin\": \"00:03:30\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:04\",\n",
-      "    \"fin\": \"00:04:08\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:10\",\n",
-      "    \"fin\": \"00:04:13\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:04:25\",\n",
-      "    \"fin\": \"00:04:28\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:07:17\",\n",
-      "    \"fin\": \"00:07:19\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
-      "    \"inicio\": \"00:12:01\",\n",
-      "    \"fin\": \"00:12:03\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"motivo\": \"muletilla\",\n",
       "    \"inicio\": \"00:12:17\",\n",
-      "    \"fin\": \"00:12:18\"\n",
+      "    \"fin\": \"00:12:19\"\n",
       "  }\n",
       "]\n",
       "--------------------------------------------------\n",
       "\n",
-      "Manteniendo clip: 00:00:01 a 00:00:13\n",
-      "Manteniendo clip: 00:00:15 a 00:00:36\n",
-      "  · Aplicando zoom a clip #1\n",
-      "Manteniendo clip: 00:00:38 a 00:01:19\n",
-      "Manteniendo clip: 00:01:22 a 00:01:31\n",
-      "  · Aplicando zoom a clip #3\n",
-      "Manteniendo clip: 00:01:35 a 00:02:22\n",
-      "Manteniendo clip: 00:02:25 a 00:02:31\n",
-      "  · Aplicando zoom a clip #5\n",
-      "Manteniendo clip: 00:02:36 a 00:02:46\n",
-      "Manteniendo clip: 00:02:48 a 00:03:13\n",
-      "  · Aplicando zoom a clip #7\n",
-      "Manteniendo clip: 00:03:16 a 00:03:23\n",
-      "Manteniendo clip: 00:03:26 a 00:03:28\n",
-      "  · Aplicando zoom a clip #9\n",
-      "Manteniendo clip: 00:03:30 a 00:04:04\n",
-      "Manteniendo clip: 00:04:08 a 00:04:10\n",
-      "  · Aplicando zoom a clip #11\n",
-      "Manteniendo clip: 00:04:13 a 00:04:25\n",
-      "Manteniendo clip: 00:04:28 a 00:07:17\n",
-      "  · Aplicando zoom a clip #13\n",
-      "Manteniendo clip: 00:07:19 a 00:12:01\n",
-      "Manteniendo clip: 00:12:03 a 00:12:17\n",
-      "  · Aplicando zoom a clip #15\n",
-      "Manteniendo clip final: 00:12:18 a 00:12:18\n",
+      "Manteniendo clip: 00:00:01 a 00:12:17\n",
       "\n",
-      "Ensamblando video final a partir de 17 clips (con zoom alternado)...\n",
+      "Ensamblando video final a partir de 1 clips (con zoom alternado)...\n",
       "\n",
       "Etapa 1 completada. Video cortado guardado en: edited/video_cortado.mp4\n",
       "Guardando metadatos de cortes en edited/metadata_cortes.json...\n",
